--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,8 +68,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/ingredient_recognition_mobile_model.tflite
     - assets/ingredient_labels.txt
+    - assets/model_unquant.tflite
     - assets/recipes.csv
     - assets/images/
 
