--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   animate_do: ^3.1.2
   google_fonts: ^6.2.0
   shared_preferences: ^2.0.12
+  lottie: ^1.0.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -72,6 +74,7 @@ flutter:
     - assets/model_unquant.tflite
     - assets/recipes.csv
     - assets/images/
+    - assets/lottie.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
